Add cspell configuration and update CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ permissions:
 
 jobs:
   build:
-    uses: axonivy-market/github-workflows/.github/workflows/ci.yml@v6
+    uses: tvtphuc-axonivy/github-workflows/.github/workflows/ci.yml@feature/MARP-3642-How-to-handle-spelling-errors
+    with:
+      cspellConfig: cspell.json
     secrets:
       mvnArgs: -Dtest.azure.app.id=${{ secrets.AZURE_APP_ID }} -Dtest.azure.app.secretKey=${{ secrets.AZURE_APP_SECRET }} -Dtest.azure.app.tenantId=${{ secrets.AZURE_APP_TENANT_ID }} -Dtest.azure.webtest.username=${{ secrets.AZURE_APP_USER_NAME }} -Dtest.azure.webtest.pass=${{ secrets.AZURE_APP_USER_PASS }} 
